添加了链接

--- a/01/index.html
+++ b/01/index.html
@@ -7,6 +7,17 @@
   <script src="jquery.1.11.3.min.js"></script>
   <link rel="stylesheet" href="index.css">
 <body>
+  <div id="menu">
+    <a href="https://huoyanru.github.io/spa/01/">图形计算器</a>
+    </br>
+    <a href="https://huoyanru.github.io/spa/02/password.html">密码可见</a>
+    </br>
+    <a href="https://huoyanru.github.io/spa/02/progress.html">进程</a>
+    </br>
+    <a href="https://huoyanru.github.io/spa/02/range.html">滑杆</a>
+    </br>
+    <a href="https://huoyanru.github.io/spa/02/timer.html">定时器</a>
+  </div>
   <div id="rectangle">
     <label for="">宽度：</label>
     <input id="rectangle__width" type="textbox"><b id="tx1"></b>
