--- a/03/index.html
+++ b/03/index.html
@@ -10,9 +10,11 @@
   <div id="rectangle">
     <label for="">宽度：</label>
     <input id="rectangle__width" type="textbox"><b id="tx1"></b>
+    <p id="width_err"></p>
     <br/><br/>
     <label for="">高度：</label>
     <input id="rectangle__height" type="textbox"><b id="tx2"></b>
+    <p id="height_err"></p>
     <br/><br/>
     <input id="rectangle__calc" type="button" value="计算">
     <br/><br/>
